Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION pre-2.1.9:
============================
 Peter McCluskey (Sep 1, 2003)
  Applied patches from Mike McDonald to make spamify_replacedomain use
 set_antispam_at, change printdates to include the dates in the table
 version of the bydate index, and make the table use the whole screen
 width instead of 80%. 

 Jose Kahan (Aug  18, 2003)
  - Changed to lowercase the suffixes added to the message indexes. That is,
    from "archive name By Date" to "archive name by date" because the
    upper case seemed out of style as we don't have any control on what
    is the string used for the archive's name. Did this change only for
    the English messages as I don't know if this convention works well for
    other languages.

 Jose Kahan (Aug  18, 2003)
  - Made the links to the different indexes show the index of the current entry.
    This change originated from the feedback we got on the WAI enhanced archievs.
    People find that this small changes increases the usability of the archive.

 Jose Kahan (Aug  18, 2003)
  - The links to the first message (aka #first) were not working in the
    by attachment, by author, and by subject indexes.

 Peter McCluskey (Aug 16, 2003)
  - applied fix from Jean-Charles Meyrignac to handle 0x1A in mbox.

 Jose Kahan (Aug  14, 2003)
  - After receiving more feedback, reverted the changes done for converting the
    displayed value of the Date: header. The reason is that users like to know
    when they send a message. This information was getting lost because we
    were converting the date to the local time.
  - Made the Received on date be  shown in converted local time.
  - Added a new configuration option, indexdateformat, so that people can
    specify a different format for indexes than the one used elsewhere. If this
    variable is not defined., it'll use the dateformat by default.